Comment * -diff in .gitattributes
The * -diff line in .gitattributes likely makes Git treat all files as undiffable (and sometimes even as binary). Remove it.

--- a/.gitattributes
+++ b/.gitattributes
@@ -29,7 +29,7 @@
 *.tar.gz  binary
 
 # Ignore trailing whitespace on diff
-* -diff
+#* -diff
 
 # Handle Windows Batch files and PowerShell scripts correctly
 *.bat     text eol=crlf
